finish the website

--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,16 @@
 
     <!-- Meta Tags -->
     <meta name="author" content="Ahmed Mohamed" />
-    <meta name="description" content="This is a Front End Mentor Website Chanellge, and It is Name is FAQ accordion card" />
-    <meta name="keywords" content="FAQ accordion card, card, css, js, react, html, Fornt End Mentor" />
+    <meta
+      name="description"
+      content="This is a Front End Mentor Website Chanellge, and It is Name is FAQ accordion card"
+    />
+    <meta
+      name="keywords"
+      content="FAQ accordion card, card, css, js, react, html, Fornt End Mentor"
+    />
     <meta name="theme-color" content="#ad68ea" />
-    <link rel="icon" href="./tab-icon//favicon-32x32.png" type="image/x-icon" />
+    <link rel="icon" href="./tab-icon//tab-icon.png" type="image/x-icon" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
